CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

SET( CPACK_PACKAGE_VERSION_MAJOR "1" )
SET( CPACK_PACKAGE_VERSION_MINOR "0" )
SET( CPACK_PACKAGE_VERSION_PATCH "1" )
SET( CPACK_SOURCE_PACKAGE_FILE_NAME "dicom2raw-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}" )
SET( CPACK_SOURCE_IGNORE_FILES "/build/;/.git/;~$;${CPACK_SOURCE_IGNORE_FILES}" )
PROJECT( dicom2raw CXX )
#ADD_DEFINITIONS(-g -O -Wall -W)
ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( include )
INCLUDE( CPack )
ADD_CUSTOM_TARGET( dist COMMAND $ {CMAKE_MAKE_PROGRAM} package_source )
